# llm_eval_framework

./: README.md  config.yaml  pyproject.toml  requirements.txt
data/examples/: anchors.jsonl  generations.jsonl  qa.jsonl
prompts/: rubric_relevance.json  toxicity_terms.txt
src/llmeval/: __init__.py
src/llmeval/judge/: engine.py  prompts.py
src/llmeval/metrics/: bias.py  consistency.py  relevance.py  toxicity.py
src/llmeval/providers/: __init__.py  gemini_provider.py  generic_http_provider.py  gorq_provider.py  local_provider.py  openai_provider.py
src/llmeval/report/: html.py
src/llmeval/runners/: create_target_task.py  eval.py
src/llmeval/utils/: common.py
targets/: README.md
